--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["David <davidkazlauskas@gmail.com>"]
 [dependencies]
 rustc-serialize = "0.3.14"
 rusqlite = "0.1.0"
+threadpool = "0.1.4"
+
